# UnidadeSensora

./: .gitignore  check_rosbag.sh  log_exec.txt
src/imu_logger/: imu_multi_logger.py  package.xml  run_dashboard.py  run_dashboard_fixed.py  run_viewer.py  setup.cfg  setup.py
src/imu_logger/imu_logger/: imu_csv_rotator.py  imu_dashboard.py  imu_dashboard_fixed.py  imu_multi_logger.py  imu_video_3dviewer.py  imu_video_viewer.py  opencv_camera_node.py
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hardware_status_publisher.cpp  my_first_node.cpp  number_counter.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  hardware_status_publisher.py  my_first_node.py  number_publisher.py  robot_news_station.py  smartphone.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
